<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <View
            android:id="@+id/map_details_fragment_button_bar_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?android:attr/dividerHorizontal"/>

        <Button
            android:layout_below="@id/map_details_fragment_button_bar_divider"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/map_details_openMapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_open_map" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLayout"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/dataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_details_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/map_details_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="false" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <LinearLayout
                android:id="@+id/map_details_fragment_file_path_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/list_selector_holo_dark"
                android:clickable="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:duplicateParentState="true"
                    android:text="@string/map_details_path"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/map_details_file_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textIsSelectable="false" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:duplicateParentState="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_details_comment"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/map_details_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <ImageView
                android:id="@+id/map_details_map_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/content_description_map"
                android:src="@drawable/test" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>